[package]
name = "brainspread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
dioxus-use-clipboard = "0.1.0"
figment = { version = "0.10.8", features = ["toml", "env"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0.157"
serde_json = "1.0.94"
